@@ -933,17 +933,15 @@ static struct Damage battle_calc_weapon_attack(
 	if (skill_num == GS_GROUNDDRIFT)
 		s_ele = s_ele_ = wflag; //element comes in flag.
 
-	if (sd && sd->weapontype1 == 0 && sd->weapontype2 > 0)
-	{
-		flag.rh=0;
-		flag.lh=1;
-	}
-	if (sstatus->lhw && sstatus->lhw->atk)
-		flag.lh=1;
-
-	if (skill_num == ASC_BREAKER)
-	{	//Soul Breaker disregards dual-wielding.
-		flag.rh = 1; flag.lh = 0;
+	if(!skill_num)
+  	{	//Skills ALWAYS use ONLY your right-hand weapon (tested on Aegis 10.2)
+		if (sd && sd->weapontype1 == 0 && sd->weapontype2 > 0)
+		{
+			flag.rh=0;
+			flag.lh=1;
+		}
+		if (sstatus->lhw && sstatus->lhw->atk)
+			flag.lh=1;
 	}
 
 	//Check for critical
@@ -1163,7 +1161,6 @@ static struct Damage battle_calc_weapon_attack(
 					short index = sd->equip_index[8];
 					
 					wd.damage = sstatus->batk;
-					if (flag.lh) wd.damage2 = wd.damage;
 
 					if (index >= 0 &&
 						sd->inventory_data[index] &&
@@ -1190,7 +1187,7 @@ static struct Damage battle_calc_weapon_attack(
 				  i |= 16; // for ex. shuriken must not be influenced by DEX
 				}
 				wd.damage = battle_calc_base_damage(sstatus, &sstatus->rhw, sc, tstatus->size, sd, i);
-				if (sstatus->lhw && flag.lh)
+				if (flag.lh)
 					wd.damage2 = battle_calc_base_damage(sstatus, sstatus->lhw, sc, tstatus->size, sd, i);
 
 				//Add any bonuses that modify the base baseatk+watk (pre-skills)
@@ -1697,7 +1694,8 @@ static struct Damage battle_calc_weapon_attack(
 			}
 
 			wd.damage = battle_addmastery(sd,target,wd.damage,0);
-			if (flag.lh) wd.damage2 = battle_addmastery(sd,target,wd.damage2,1);
+			if (flag.lh)
+				wd.damage2 = battle_addmastery(sd,target,wd.damage2,1);
 
 			if((skill=pc_checkskill(sd,SG_STAR_ANGER)) >0 && (t_class == sd->hate_mob[2] || (sc && sc->data[SC_MIRACLE].timer!=-1)))
 			{
@@ -1919,8 +1917,8 @@ static struct Damage battle_calc_weapon_attack(
 				wd.damage2 = wd.damage2 * (30 + (skill * 10))/100;
 				if(wd.damage2 < 1) wd.damage2 = 1;
 			}
-		} else if(sd->status.weapon == W_KATAR)
-		{ //Katars
+		} else if(sd->status.weapon == W_KATAR && !skill_num)
+		{ //Katars (offhand damage only applies to normal attacks, tested on Aegis 10.2)
 			skill = pc_checkskill(sd,TF_DOUBLE);
 			wd.damage2 = wd.damage * (1 + (skill * 2))/100;
 
@@ -2413,7 +2411,9 @@ struct Damage  battle_calc_misc_attack(
 	switch(skill_num){
 	case PA_PRESSURE:
 	case GS_FLING:
-		flag.elefix = flag.cardfix = 0;
+		flag.cardfix = 0;
+	case ASC_BREAKER:
+		flag.elefix = 0;
 	case HT_BLITZBEAT:
 	case TF_THROWSTONE:
 	case SN_FALCONASSAULT:
@@ -2421,7 +2421,7 @@ struct Damage  battle_calc_misc_attack(
 	case CR_ACIDDEMONSTRATION:
 		md.flag = (md.flag&~BF_RANGEMASK)|BF_LONG;
 		break;
-	case HVAN_EXPLOSION:	//[orn]
+	case HVAN_EXPLOSION:
 	case NPC_SELFDESTRUCTION:
 	case NPC_SMOKING:
 		flag.elefix = flag.cardfix = 0;
@@ -2510,6 +2510,9 @@ struct Damage  battle_calc_misc_attack(
 		break;
 	case GS_FLING:
 		md.damage = sd?sd->status.job_level:status_get_lv(src);
+		break;
+	case ASC_BREAKER:
+		md.damage = 500+rand()%500 + 5*skill_lv * sstatus->int_;
 		break;
 	}
 	
@@ -3014,46 +3017,71 @@ int battle_check_target( struct block_list *src, struct block_list *target,int f
 			return -1;
 	}
 
-	if (target->type == BL_SKILL) //Needed out of the switch in case the ownership needs to be passed skill->mob->master
-	{
-		struct skill_unit *su = (struct skill_unit *)target;
-		if (!su->group)
-			return 0;
-		if (skill_get_inf2(su->group->skill_id)&INF2_TRAP)
-		{	//Only a few skills can target traps...
-			switch (battle_getcurrentskill(src))
-			{
-				case HT_REMOVETRAP:
-				case AC_SHOWER:
-				case WZ_HEAVENDRIVE:
-					state |= BCT_ENEMY;
-					strip_enemy = 0;
-					break;
-				default:
-					return 0;
+	//t_bl/s_bl hold the 'master' of the attack, while src/target are the actual
+	//objects involved.
+	if ((t_bl = battle_get_master(target)) == NULL)
+		t_bl = target;
+
+	if ((s_bl = battle_get_master(src)) == NULL)
+		s_bl = src;
+
+	switch (target->type)
+	{	//Checks on actual target
+		case BL_PC:
+			if (((TBL_PC*)target)->invincible_timer != -1 || pc_isinvisible((TBL_PC*)target))
+				return -1; //Cannot be targeted yet.
+			break;
+		case BL_MOB:
+			if (((TBL_MOB*)target)->special_state.ai > 1 &&
+				s_bl->type == BL_PC && src->type != BL_MOB)
+			{	//Alchemist summoned mobs are always targettable by players
+				state |= BCT_ENEMY;
+				strip_enemy = 0;
 			}
-		} else if (su->group->skill_id==WZ_ICEWALL)
-		{	//Icewall can be hit by anything except skills.
-			if (src->type == BL_SKILL)
+			break;
+		case BL_SKILL:
+		{
+			TBL_SKILL *su = (TBL_SKILL*)target;
+			if (!su->group)
 				return 0;
-			state |= BCT_ENEMY;
-			strip_enemy = 0;
-		} else	//Excepting traps and icewall, you should not be able to target skills.
+			if (skill_get_inf2(su->group->skill_id)&INF2_TRAP)
+			{	//Only a few skills can target traps...
+				switch (battle_getcurrentskill(src))
+				{
+					case HT_REMOVETRAP:
+					case AC_SHOWER:
+					case WZ_HEAVENDRIVE:
+						state |= BCT_ENEMY;
+						strip_enemy = 0;
+						break;
+					default:
+						return 0;
+				}
+			} else if (su->group->skill_id==WZ_ICEWALL)
+			{	//Icewall can be hit by anything except skills.
+				if (src->type == BL_SKILL)
+					return 0;
+				state |= BCT_ENEMY;
+				strip_enemy = 0;
+			} else	//Excepting traps and icewall, you should not be able to target skills.
+				return 0;
+		}
+		//Valid targets with no special checks here.
+//		case BL_HOM:
+//			break;
+		//All else not specified is an invalid target.
+		default:	
 			return 0;
-		if ((t_bl = map_id2bl(su->group->src_id)) == NULL)
-			t_bl = target; //Fallback on the trap itself, otherwise consider this a "versus caster" scenario.
 	}
 
 	switch (t_bl->type)
-	{
+	{	//Checks on target master
 		case BL_PC:
 		{
 			TBL_PC *sd = (TBL_PC*)t_bl;
-			if (sd->invincible_timer != -1 || pc_isinvisible(sd))
-				return -1; //Cannot be targeted yet.
 			if (sd->state.monster_ignore && t_bl != s_bl && flag&BCT_ENEMY)
 				return 0; //Global inmunity to attacks.
-			if (sd->special_state.killable && t_bl != s_bl)
+			if (sd->state.killable && t_bl != s_bl)
 			{
 				state |= BCT_ENEMY; //Universal Victim
 				strip_enemy = 0;
@@ -3063,52 +3091,50 @@ int battle_check_target( struct block_list *src, struct block_list *target,int f
 		case BL_MOB:
 		{
 			TBL_MOB *md = (TBL_MOB*)t_bl;
+			
 			if (!agit_flag && md->guardian_data && md->guardian_data->guild_id)
 				return 0; //Disable guardians/emperiums owned by Guilds on non-woe times.
-			if (md->special_state.ai == 2)
-			{	//Mines are sort of universal enemies.
-				state |= BCT_ENEMY;
-				strip_enemy = 0;
-			}
-			if (md->master_id && (t_bl = map_id2bl(md->master_id)) == NULL)
-				t_bl = &md->bl; //Fallback on the mob itself, otherwise consider this a "versus master" scenario.
 			break;
 		}
-		case BL_PET:
-		{
-			return 0; //Pets cannot be targetted.
-		}
-		case BL_SKILL: //Skill with no owner? Kinda odd... but.. let it through.
-			break;
-		default:	//Invalid target
-			return 0;
 	}
 
-	if (src->type == BL_SKILL)
-	{
-		struct skill_unit *su = (struct skill_unit *)src;
-		if (!su->group)
-			return 0;
-
-		if (su->group->src_id == target->id)
+	switch(src->type)
+  	{	//Checks on actual src type
+		case BL_MOB:
+			if (!agit_flag && ((TBL_MOB*)src)->guardian_data && ((TBL_MOB*)src)->guardian_data->guild_id)
+				return 0; //Disable guardians/emperium owned by Guilds on non-woe times.
+			break;
+		case BL_PET:
+			if (t_bl->type != BL_MOB && flag&BCT_ENEMY)
+				return 0; //Pet may not attack non-mobs.
+			if (t_bl->type == BL_MOB && ((TBL_MOB*)t_bl)->guardian_data && flag&BCT_ENEMY)
+				return 0; //pet may not attack Guardians/Emperium
+			break;
+		case BL_SKILL:
 		{
-			int inf2;
-			inf2 = skill_get_inf2(su->group->skill_id);
-			if (inf2&INF2_NO_TARGET_SELF)
-				return -1;
-			if (inf2&INF2_TARGET_SELF)
-				return 1;
+			struct skill_unit *su = (struct skill_unit *)src;
+			if (!su->group)
+				return 0;
+
+			if (su->group->src_id == target->id)
+			{
+				int inf2;
+				inf2 = skill_get_inf2(su->group->skill_id);
+				if (inf2&INF2_NO_TARGET_SELF)
+					return -1;
+				if (inf2&INF2_TARGET_SELF)
+					return 1;
+			}
+			break;
 		}
-		if ((s_bl = map_id2bl(su->group->src_id)) == NULL)
-			s_bl = src; //Fallback on the trap itself, otherwise consider this a "caster versus enemy" scenario.
 	}
 
 	switch (s_bl->type)
-	{
+	{	//Checks on source master
 		case BL_PC:
 		{
 			TBL_PC *sd = (TBL_PC*) s_bl;
-			if (sd->special_state.killer && s_bl != t_bl)
+			if (sd->state.killer && s_bl != t_bl)
 			{
 				state |= BCT_ENEMY; //Is on a killing rampage :O
 				strip_enemy = 0;
@@ -3147,27 +3173,13 @@ int battle_check_target( struct block_list *src, struct block_list *target,int f
 				if (t_bl->type == BL_MOB && !((TBL_MOB*)t_bl)->special_state.ai)
 					state |= BCT_ENEMY; //Natural enemy for AI mobs are normal mobs.
 			}
-			if (md->master_id && (s_bl = map_id2bl(md->master_id)) == NULL)
-				s_bl = &md->bl; //Fallback on the mob itself, otherwise consider this a "from master" scenario.
 			break;
 		}
-		case BL_PET:
-		{
-			TBL_PET *pd = (TBL_PET*)s_bl;
-			if (t_bl->type != BL_MOB && flag&BCT_ENEMY)
-				return 0; //Pet may not attack non-mobs.
-			if (t_bl->type == BL_MOB && ((TBL_MOB*)t_bl)->guardian_data && flag&BCT_ENEMY)
-				return 0; //pet may not attack Guardians/Emperium
-			if (t_bl->type != BL_PC)
-				state |= BCT_ENEMY; //Stock enemy type.
-			if (pd->msd)
-				s_bl = &pd->msd->bl; //"My master's enemies are my enemies..."
+		default:
+		//Need some sort of default behaviour for unhandled types.
+			if (t_bl->type != s_bl->type)
+				state |= BCT_ENEMY;
 			break;
-		}
-		case BL_SKILL: //Skill with no owner? Fishy, but let it through.
-			break;
-		default:	//Invalid source of attack?
-			return 0;
 	}
 	
 	if ((flag&BCT_ALL) == BCT_ALL) { //All actually stands for all attackable chars 
